--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "motion": "^11.17.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
     "react": "^18.3.1",
