--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "emailjs-com": "^3.2.0",
     "express": "^4.21.0",
     "motion": "^11.17.0",
     "mysql": "^2.18.1",
