--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.12.0",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "devicon": "^2.17.0",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
     "express": "^4.21.0",
